--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <script>
-      location.replace('http://blog.yhf369646796.gitpress.org');
+      location.replace('http://blog.farmanyu.gitpress.org');
     </script>
   </body>
 </html>
